@@ -1,6 +1,16 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.403 2008/05/15 18:40:29 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.405 2008/05/17 17:12:05 armin76 Exp $
+
+  17 May 2008; Raúl Porcel <armin76@gentoo.org>
+  mozilla-firefox-3.0_rc1.ebuild:
+  Raise nspr/nss dep
+
+*mozilla-firefox-3.0_rc1 (17 May 2008)
+
+  17 May 2008; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-firefox-3.0_rc1.ebuild:
+  Version bump
 
   15 May 2008; Raúl Porcel <armin76@gentoo.org>
   mozilla-firefox-2.0.0.11.ebuild, mozilla-firefox-2.0.0.14.ebuild,
